--- a/index.html
+++ b/index.html
@@ -12,20 +12,27 @@
         * { margin: 0; padding: 0; }
         body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(images/noise.jpg); }
         .clear { clear: both; }
-        #page-wrap { width: 800px; margin: 40px auto 60px; }
+        #page-wrap { width: 80%; margin: 40px auto 60px; }
         #pic { float: right; margin: -30px 0 0 0; }
-        h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
-        h2 { font-size: 20px; margin: 0 0 6px 0; position: relative; }
-        h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Georgia, Serif; font-size: 16px; color: #999; font-weight: normal; }
-        p { margin: 0 0 16px 0; }
+        h1 { margin: 0 0 1em 0; padding: 0 0 1em 0; font-size: 2.625em; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
+        h2 { font-size: 1.25em; margin: 0 0 6px 0; position: relative; }
+        h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Georgia, Serif; font-size: .8em; color: #999; font-weight: normal; }
+        p { margin: 0 0 1em 0; }
         a { color: #999; text-decoration: none; border-bottom: 1px dotted #999; }
         a:hover { border-bottom-style: solid; color: black; }
         ul { margin: 0 0 32px 17px; }
-        #objective { width: 500px; float: left; }
+        #objective { width: 62.5%; }
         #objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
-        dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 100px; border-right: 1px solid #999;  }
-        dd { width: 600px; float: right; }
+        dt { font-style: italic; font-weight: bold; font-size: 1.125em; text-align: right; padding: 0 3% 0 0; width: 18.75%; float: left; height: 100px; border-right: 1px solid #999;  }
+        dd { width: 75%; float: right; }
         dd.clear { float: none; margin: 0; height: 15px; }
+        @media only screen and (max-device-width : 768px), only screen and (max-width : 768px) {
+            #pic { width: 33%; }
+            #objective { width: 100%; float: none; }
+            h2 span { display: block; position: relative; }
+            dt { float: none; width: 100%; text-align: left; border-right: none; border-bottom: 1px solid #999; height: auto; padding: 0; line-height: 2em; }
+            dd { width: 90%; float: none;margin: 1em auto; }
+        }
      </style>
 </head>
 
