--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 <head>
      <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+     <meta name=“viewport” content="initial-scale=1.0">
 
      <title>One Page Resume</title>
 
