--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                     </li>
                     <li>Maintain dev/prod Drupal 7 multisite environment with 15+ sites for 2+ developers.</li>
                     <li>Develop content strategies, train and assist content managers for over 30 web sites and associated social media outlets.</li>
+                    <li>Create, maintain, and disseminate identity guidelines and logos for The College.</li>
                     <li>Manage one FTE and 1-2 student workers to assist with above tasks.</li>
                     <li>Manage 3-5 student Media Editors to plan and deliver original content for web and social media through weekly meetings and one-on-one work.</li>
                     <li>Serve as primary desktop support for College Advisors, Deans, and faculty.</li>
@@ -168,8 +169,8 @@
             <dd>
                 <ul>
                     <li>Photography published in <em>The Core,</em> <em>College Newsletter</em>, <a href="https://avischwab.contently.com/">campus, &amp; other publications</a>.</li>
-                    <li>Awarded Boy Scouts of America Eagle Scout Rank.</li>
-                    <li>University of Chicago Dean's List</li>
+                    <li>Eagle Scout.</li>
+                    <li>University of Chicago Dean's List.</li>
                 </ul>
             </dd>
             
