--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         .clear { float: none; margin: 0; height: 15px; }
         .attribution { font-size: .8em; color: #666; text-align: right; }
         @media only screen and (max-device-width : 768px), only screen and (max-width : 768px) {
-            #page-wrap {width: 100%; padding: 0 2em; }
+            #page-wrap {width: calc(100% - 4em); padding: 0 2em; }
             #pic { width: 33%; }
             #objective { width: 100%; float: none; }
             h2 span { display: block; position: relative; }
