--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <h3>Senior Front-End Developer&mdash;May 2015 to present</h3>
                 
                 <ul>
-                     <li>Manage <a href="http://sites.uchicago.edu">>UChicago Sites</a> templated website service for 300+ sites across campus and the Medical Center.</li>
+                     <li>Manage <a href="http://sites.uchicago.edu">UChicago Sites</a> templated website service for 300+ sites across campus and the Medical Center.</li>
                 </ul>
                  
                 <h2>University of Chicago: College IT</h2>
