--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         .konami li.encoded {display: list-item;}
         .konami p.encoded {display: block;}
         .konami #pic { padding: 0; box-shadow: none; border: 0; background: none; }
+        .strike {text-decoration: line-through;}
         @media only screen and (max-device-width : 768px), only screen and (max-width : 768px) {
             #page-wrap {width: calc(100% - 4em); padding: 0 2em; }
             #pic { width: 33%; }
@@ -83,9 +84,9 @@
             <dt id="skills">Key Skills</dt>
             <dd>
                 <ul>
-                    <li class="encoded">Has 30 lives</li>
-                    <li>Drupal: Drush, custom module development, site building, multisite management</li>
-                    <li>LAMP stack</li>
+                    <li class="encoded">Has <span class='strike'>30</span> 29 lives</li>
+                    <li>Drupal: Drush, custom module development, site building, multisite management, Feature-driven development, Varnish</li>
+                    <li>LAMP stack &amp; Acquia hosting</li>
                     <li>Project management: Basecamp, JIRA</li>
                     <li>Sublime Text (and extensions)</li>
                     <li>Analytics: Google/Crazyegg</li>
@@ -107,7 +108,8 @@
                 <h3>Senior Front-End Developer&mdash;May 2015 to present</h3>
                 
                 <ul>
-                     <li>Manage <a href="http://sites.uchicago.edu">UChicago Sites</a> templated website service for 300+ sites across campus and the Medical Center.</li>
+                     <li>Manage <a href="http://sites.uchicago.edu">UChicago Sites</a> templated website service for 300+ sites across campus and the Medical Center. Regularly run maintenance updates in conjunction with Acquia Remote Administration process, develop and deploy new features, manage support queue, and conduct client trainings.</li>
+                     <li>Lead rebuild of <a target="_blank" href="https://news.uchicago.edu">news.uchicago.edu</a>&mdash;(2016) With one other Front-End Dev and one Programmer, rebuilt major D6 property in Drupal 7. Restructured technical project management processes to facilitate multi-developer project using Trello and add-ons. Developed Features-driven development workflow utilizing pull requests and cross-developer QA. Engaged client in Agile-like process, continually iterating on changes throughout the development process. Ensured quality across >30,000 migrated content items. Set aggressive caching with Varnish and Expire/Acquia Purge modules and load tested against performance benchmarks with Blazemeter. Maintained developer morale despite aggressive demands from client and management.</li>
                 </ul>
                  
                 <h2>University of Chicago: College IT</h2>
@@ -169,7 +171,7 @@
                     <li><strong>DrupalCon</strong>&mdash;volunteer, <a target="_blank" href="http://edusummitdrupalconatx.drupalgardens.com/content/drupal-uchicago-edu">BoF organizer</a></li>
                     <li><strong>Drupal@UChicago</strong>, <strong>UChicago Web Community</strong>&mdash;co-founder</li>
                     <li><strong><a target="_blank" href="http://62garden.com">62nd &amp; Dorchester Community Garden</a></strong>&mdash;co-founder, committee member (2010-14)</li>
-                    <li><strong>Delta Upsilon Chicago Alumni Association</strong>&mdash;President (2011-present)</li>
+                    <li><strong>Delta Upsilon Chicago Alumni Association</strong>&mdash;President (2011-2015)</li>
                     <li><strong><a target="_blank" href="http://twitter.com/uchinomgo">UchiNOMgo</a></strong>&mdash;founder (2011-present)</li>
                 </ul>
             </dd>
