Update title and remove a few old things

--- a/index.html
+++ b/index.html
@@ -86,16 +86,13 @@
                 <ul>
                     <li class="encoded">Has <span class='strike'>30</span> 29 lives</li>
                     <li>Drupal: Drush, custom module development, site building, multisite management, Feature-driven development, Varnish</li>
-                    <li>LAMP stack &amp; Acquia hosting</li>
+                    <li>LAMP stack &amp; managed hosting</li>
                     <li>Project management: Basecamp, JIRA</li>
-                    <li>Sublime Text (and extensions)</li>
-                    <li>Analytics: Google/Crazyegg</li>
+                    <li>Sublime Text, Atom, PHPStorm IDE</li>
                     <li>Code repositories: Git, SVN, &amp; Bitbucket</li>
                     <li>HTML, CSS, JavaScript</li>
-                    <li>CSS preprocessing: LESS, Compass</li>
                     <li>Adobe Creative Suite</li>
                     <li>Mac &amp; Windows desktop and server administration</li>
-
                 </ul>
 
             </dd>
@@ -105,7 +102,8 @@
             <dt id="experience">Experience</dt>
             <dd>
                 <h2>Palantir.net</h2>
-                <h3>Senior Engineer&mdash;July 2016 to present</h3>
+                <h3>Senior Engineer &amp; Project Lead&mdash;January 2018 to present</h3>
+                <h3>Senior Engineer&mdash;July 2016 to January 2018</h3>
                 
                 <h2>University of Chicago: Web Services</h2>
                 <h3>Senior Front-End Developer&mdash;May 2015 to June 2016</h3>
