Add MidCamp and DrupalCon 2018 sessions

--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
             <dt id="community">Community<wbr>/Volunteer Involvement &amp; Past Talks</dt>
             <dd>
                 <ul>
+                     <li><strong>DrupalCon 2018 Nashville</strong> <a href="https://events.drupal.org/nashville2018/sessions/community-convos-camp-organizing">Community Convos: Camp Organizing</a></li>
+                     <li><strong>MidCamp 2018</strong> <a href="https://www.midcamp.org/topic/american-medical-association-topic-landing-pages-d8-case-study">American Medical Association: Topic Landing Pages (A D8 Case Study)</a></li>
                     <li><strong>DrupalCon Dublin</strong>&mdash;speaker, <a href="https://events.drupal.org/dublin2016/sessions/midcamp-madness-and-planning-human-centered-events">MidCamp Madness and Planning Human-Centered Events</a>, Sept 2016</li> 
                     <li><strong>MidCamp</strong> (Midwest Regional Drupal Camp)&mdash;founding co-organizer, speaker (<a target="_blank" href="http://2014.midcamp.org/session/how-rtfm-m-entire-internet">2014</a>, <a target="_blank" href="http://2015.midcamp.org/session-proposal/migration-exactly-0-zero-lines-code">2015</a>)</li>
                     <li><strong>CADUG</strong> (Chicago Area Drupal Users Group)&mdash;member, speaker (<a href="http://froboy.org/10things" target="_blank">Oct 2015 - "10 Things I Hate About U(sers)"</a>)</li>
