Add Kanopi work

--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
             <dd>
                 <h2>Kanopi Studios</h2>
                 <h3>Drupal Technical Lead&mdash;January 2019 to March 2019</h3>
+
+                <ul>
+                    <li>Delivered frond-end and back-end work for a global law firm redesign in Drupal 7 utilizing Drupal Pagragraphs module, Bootstrap theme, and custom code.</li>
+                    <li>Assess and deliver language and accessibility fixes for a Drupal 8 multilingual site for use in RTL languages and by blind content authors.</li>
+                    <li>Collaborate on process improvement through discussion, documentation, and standards-building.</li>
+                    <li>Contribute to devops resources including a starter theme and Docksal configuration.</li>
+                </ul>
                  
                 <h2>Palantir.net</h2>
                 <h3>Senior Engineer &amp; Project Lead&mdash;January 2018 to December 2018</h3>
