Add federated search link.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                  
                 <ul>
                      <li>Lead a team of 3-6 in supporting and enhancing properties for the American Medical Association, including personalization via Acquia Lift, retroactive style-guide development with Pattern Lab, and Drupal 8 site-building utilizing Layout Builder. (<a href="https://www.drupal.org/case-study/american-medical-association-topics-pages">Case Study</a>)</li>
-                     <li>Architect and lead team of 1-2 in building a reusable search application for the University of Michigan Health System, utilizing React, Apache Solr, and Drupal custom code.</li>
+                    <li>Architect and lead team of 1-2 in building a <a href="https://www.palantir.net/blog/federated-search-demo" target="_blank">reusable search application</a> for the University of Michigan Health System, utilizing React, Apache Solr, and Drupal custom code.</li>
                      <li>Lead team of 4 in building a marketing and course search site for <a target="_blank" href="https://ntc.edu">Northcentral Technical College</a>, including significant D8 migration developmnent and a integrated style guide leveraging <a href="http://emulsify.info/" target="_blank">Emulsify</a>.</li>
                  </ul>
                      
