--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@
             <dt id="community">Community<wbr>/Volunteer Involvement &amp; Past Talks</dt>
             <dd>
                 <ul>
+                    <li><strong>Drupal Flyover Camp 2019</strong> <a href="https://www.flyovercamp.org/schedule/energizing-seated">Energizing the Seated</a></li>
+                    <li><strong>MidCamp 2019</strong> <a href="https://www.midcamp.org/2019/topic-proposal/erasing-stigma-energizing-seated">Energizing the Seated</a></li>
                     <li><strong>Drupal Decoupled Days 2018</strong> <a href="https://2018.decoupleddays.com/session/federated-search-drupal-solr-and-react-aka-decoupled-ouroboros">Federated Search with Drupal, SOLR, and React (AKA the Decoupled Ouroboros)</a> (<a href="https://docs.google.com/presentation/d/e/2PACX-1vTYvnePxefbA4blmcIKlobV0YMD5BvbQZ-Zgo7biFMhoGtxvfD6GvRBRI1iwgq6eTvsh9jGFarUXMYq/pub?start=false&loop=false&delayms=3000">slides</a>)</li>
                     <li><strong>DrupalCon 2018 Nashville</strong> <a href="https://events.drupal.org/nashville2018/sessions/community-convos-camp-organizing">Community Convos: Camp Organizing</a></li>
                     <li><strong>MidCamp 2018</strong> <a href="https://www.midcamp.org/2018/topic-proposal/american-medical-association-topic-landing-pages-d8-case-study">American Medical Association: Topic Landing Pages (A D8 Case Study)</a></li>
