Add links and Acquia cert

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <p>
                 Highlights of my recent work include:
                 <ul>
-                    <li>Leading the formation board of the Drupal Event Organizer Working Group and producing our initial charter.</li>
-                    <li>Serving on the leadership team of MidCamp and our fiscal sponsor, the Midwest Open Source Alliance.</li>
-                    <li>Working with a small development team at the American Medical Association to hone their skills, build better project management processes, and bring uniformity to development practices across the team.</li>
+                    <li>Leading the formation board of the <a href="https://www.drupal.org/community/event-organizers">Drupal Event Organizer Working Group</a> and producing our initial charter.</li>
+                    <li>Serving on the leadership team of <a href="https://midcamp.org">MidCamp</a> and our fiscal sponsor, the <a href="https://midwestopensourcealliance.org/">Midwest Open Source Alliance</a>.</li>
+                    <li>Working with a small development team at the <a href="https://www.aha.org/">American Hospital Association</a> to hone their skills, build better project management processes, and bring uniformity to development practices across the team.</li>
                 </ul>
             </p>
         </div>
@@ -223,8 +223,9 @@
             
             <dd class="clear"></dd>
 
-            <dt name="education">Education</dt>
+            <dt name="education">Education &amp; Certifications</dt>
             <dd>
+                <p>Acquia Drupal Certified—<a href="https://certification.acquia.com/user/1656751">Drupal 8 Developer (April 2019)</a></p>
                 <p>University of Chicago Graham School—<strong>Negotiation and Dispute Resolution</strong>, 2012; <strong>Mapping Processes</strong>, 2010</p>
                 <p>University of Chicago—<strong>S.B. Computer Science, 2003</strong></p>
             </dd>
