--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <li><strong>CADUG</strong> (Chicago Area Drupal Users Group)&mdash;<a href="http://froboy.org/10things" target="_blank">"10 Things I Hate About U(sers)"</a>, October 2015</li>
                         <li><strong>MidCamp 2015</strong>&mdash;<a href="http://2014.midcamp.org/session/how-rtfm-m-entire-internet">How to RTFM as M→The Entire Internet</a></li>
                         <li><strong>MidCamp 2014</strong>&mdash;<a href="http://2015.midcamp.org/session-proposal/migration-exactly-0-zero-lines-code">Migration in Exactly Zero Lines of Code</a></li>
-                        <li><strong>DrupalCamp Fox Valley 2013</strong>&mdash;<a href="http://2013.drupalcampfv.org/session/drupal-uchicago-edu">Drupal. @uchicago, .edu</a></li>
+                        <li><strong>DrupalCamp Fox Valley 2013</strong>&mdash;<a href="http://2013.drupalcampfv.org/session/drupal-uchicago-edu">Drupal, @UChicago, .edu</a></li>
                         <li><strong>DrupalCamp Chicago 2012</strong>&mdash;<a href="https://2012.drupalcampchicago.org/sessions/drupal-uchicago-edu">Drupal, @UChicago, .edu</a></li>
                     </ul>
                 </dd>
