Add May 2020 and update 2012

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
             <dt id="speaking">Speaking Experience</dt>
                 <dd>
                     <ul>
+                        <li><strong>Drupal Chicago Meetup - May 2020</strong>&mdash<a href="https://youtu.be/mKS-5GdQTZI?t=2371">Energizing the Seated</a></li>
                         <li><strong>Drupal Flyover Camp 2019</strong>&mdash;<a href="https://www.flyovercamp.org/schedule/energizing-seated">Energizing the Seated</a> (<a href="https://www.youtube.com/watch?v=2ctU5CF9Ap0&t=607s">bonus recording with slides and exercise demos</a>)</li>
                         <li><strong>MidCamp 2019</strong>&mdash;<a href="https://www.midcamp.org/2019/topic-proposal/erasing-stigma-energizing-seated">Energizing the Seated</a></li>
                         <li><strong>Drupal Decoupled Days 2018</strong>&mdash;<a href="https://2018.decoupleddays.com/session/federated-search-drupal-solr-and-react-aka-decoupled-ouroboros">Federated Search with Drupal, SOLR, and React (AKA the Decoupled Ouroboros)</a> (<a href="https://docs.google.com/presentation/d/e/2PACX-1vTYvnePxefbA4blmcIKlobV0YMD5BvbQZ-Zgo7biFMhoGtxvfD6GvRBRI1iwgq6eTvsh9jGFarUXMYq/pub?start=false&loop=false&delayms=3000">slides</a>)</li>
@@ -204,7 +205,7 @@
                         <li><strong>MidCamp 2015</strong>&mdash;<a href="http://2014.midcamp.org/session/how-rtfm-m-entire-internet">How to RTFM as M→The Entire Internet</a></li>
                         <li><strong>MidCamp 2014</strong>&mdash;<a href="http://2015.midcamp.org/session-proposal/migration-exactly-0-zero-lines-code">Migration in Exactly Zero Lines of Code</a></li>
                         <li><strong>DrupalCamp Fox Valley 2013</strong>&mdash;<a href="http://2013.drupalcampfv.org/session/drupal-uchicago-edu">Drupal, @UChicago, .edu</a></li>
-                        <li><strong>DrupalCamp Chicago 2012</strong>&mdash;<a href="https://2012.drupalcampchicago.org/sessions/drupal-uchicago-edu">Drupal, @UChicago, .edu</a></li>
+                        <li><strong>DrupalCamp Chicago 2012</strong>&mdash;<a href="https://player.vimeo.com/video/55020928">Drupal, @UChicago, .edu</a></li>
                     </ul>
                 </dd>
                 
