--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <dt id="speaking">Speaking Experience</dt>
                 <dd>
                     <ul>
-                        <li><strong>Drupal Chicago Meetup - May 2020</strong>&mdash<a href="https://youtu.be/mKS-5GdQTZI?t=2371">Energizing the Seated</a></li>
+                        <li><strong>Drupal Chicago Meetup - May 2020</strong>&mdash;<a href="https://youtu.be/mKS-5GdQTZI?t=2371">Energizing the Seated</a></li>
                         <li><strong>Drupal Flyover Camp 2019</strong>&mdash;<a href="https://www.flyovercamp.org/schedule/energizing-seated">Energizing the Seated</a> (<a href="https://www.youtube.com/watch?v=2ctU5CF9Ap0&t=607s">bonus recording with slides and exercise demos</a>)</li>
                         <li><strong>MidCamp 2019</strong>&mdash;<a href="https://www.midcamp.org/2019/topic-proposal/erasing-stigma-energizing-seated">Energizing the Seated</a></li>
                         <li><strong>Drupal Decoupled Days 2018</strong>&mdash;<a href="https://2018.decoupleddays.com/session/federated-search-drupal-solr-and-react-aka-decoupled-ouroboros">Federated Search with Drupal, SOLR, and React (AKA the Decoupled Ouroboros)</a> (<a href="https://docs.google.com/presentation/d/e/2PACX-1vTYvnePxefbA4blmcIKlobV0YMD5BvbQZ-Zgo7biFMhoGtxvfD6GvRBRI1iwgq6eTvsh9jGFarUXMYq/pub?start=false&loop=false&delayms=3000">slides</a>)</li>
